chore: migrate to rxjava3
Co-Authored: remisultan <remi.sultan@gmail.com>